// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon> should be rendered with "in text" class 1`] = `
<span
  className="far fa-fire icon_in-text"
/>
`;

exports[`<Icon> should be rendered with className 1`] = `
<span
  className="some-class far fa-fire"
/>
`;

exports[`<Icon> should be rendered with icon name 1`] = `
<span
  className="far fa-fire"
/>
`;
